# heart

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  buildspec.json
build-aux/: build-installer.ps1
cmake/windows/: helpers.cmake
cmake/windows/resources/: installer-windows.iss.in
data/web/: index.html  script.js  settings.html  style.css
release/: .gitkeep
src/: ble-manager-winrt.cpp  ble-manager.hpp  plugin-main.cpp
